# vntdr

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  stack.env  stack.env.example
.github/workflows/: publish-ghcr.yml
src/vntdr/: __init__.py  cleaning.py  cli.py  config.py  models.py  webapp.py
src/vntdr/adapters/: __init__.py  orders.py  state.py  telegram.py  telegram_bot.py
src/vntdr/services/: __init__.py  config_service.py  history.py  metrics.py  monitoring.py  research.py  risk.py  telegram_research.py
src/vntdr/storage/: __init__.py  database.py  repositories.py
src/vntdr/strategies/: __init__.py  base.py  cm_macd_ult_mtf.py  demo_momentum.py
tests/: conftest.py
tests/integration/: test_cli.py  test_history_sync.py  test_monitoring.py  test_okx_real_api.py  test_research_workflows.py  test_telegram_bot_commands.py
tests/unit/: test_cleaning.py  test_cm_macd_strategy.py  test_config.py  test_dockerfile.py  test_metrics.py  test_models.py  test_okx_history_client.py  test_okx_order_executor.py  test_optimization_methods.py  test_repository_case_insensitivity.py  test_risk_manager.py  test_telegram_bot_formatting.py  test_telegram_research_service.py  test_trade_mode.py  test_webapp_helpers.py
